initial framwork commit

--- a/Example/RDatePickerHelper/Base.lproj/Main.storyboard
+++ b/Example/RDatePickerHelper/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +18,40 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ntw-FR-8zn">
+                                <rect key="frame" x="109" y="316" width="157" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Open Date Picker"/>
+                                <connections>
+                                    <action selector="btnAction_DatePickerClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="WAv-mL-nya"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iLp-Dr-dhs">
+                                <rect key="frame" x="16" y="266" width="343" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="tGE-lt-iYl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="iLp-Dr-dhs" secondAttribute="trailing" constant="16" id="Kpf-VN-YVs"/>
+                            <constraint firstItem="ntw-FR-8zn" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="YkE-LI-zli"/>
+                            <constraint firstItem="ntw-FR-8zn" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="gqv-IT-XwZ"/>
+                            <constraint firstItem="ntw-FR-8zn" firstAttribute="top" secondItem="iLp-Dr-dhs" secondAttribute="bottom" constant="16" id="hBi-2y-fiK"/>
+                            <constraint firstItem="iLp-Dr-dhs" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="jw5-X2-oZx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="txtDatePicker" destination="iLp-Dr-dhs" id="2qA-yQ-Wt9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="86" y="-32"/>
         </scene>
     </scenes>
 </document>
